Se agregaron los primeros contenidos a la pagina principal

--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,9 @@
 .myfont {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
+.body {
+    margin: 0;
+}
 .gaby {
     text-align: justify;
 }
