--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 /*Hacer referencia al tipo de fuente usar:
  font-family: 'Roboto', sans-serif;  */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 .myfont {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -11,7 +11,7 @@
     text-align: justify;
 }
 nav i {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.5rem;
     color: rgb(247, 148, 29);
        
@@ -22,4 +22,16 @@ nav i {
 }
 .hero {
     margin: 25px;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    font-style: oblique;
+}
+
+.textBanner {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    font-style: normal;
 }
